# Google-auth

./: .env.sample  .gitignore  README.md  alembic.ini  pre-commit-config.yaml  pyproject.toml  requirements.txt
api/: app.py  database.py
apps/auth/: api.py  email_service.py
apps/schemas/: user.py
apps/user/: api.py  models.py
src/: main.py
src/api/: auth.py  dependencies.py  main_handlers.py  main_routers.py  routers.py  users.py
src/api/routers/: auth.py  company.py  users.py
src/api/routers/admin/: permission.py  protected.py
src/core/: config.py
src/core/config/: admin_settings.py  app_settings.py  database.py  email.py  logger.py
src/db/: db.py
src/enums/: choose_company.py  messages.py  permissions.py
src/exceptions/: error_handler.py  errors.py  handlers.py
src/models/: company.py  user_subscription.py  users.py
src/notifications/: notifier.py
src/parsers/: company_parser.py
src/repositories/: company.py  user_subscription.py  users.py
src/schedulers/: company_scheduler.py
src/schemas/: admin.py  auth.py  company.py  subscription.py  users.py
src/services/: admin_service.py  auth_service.py  company_service.py  email_service.py  users_service.py
src/services/templates/: access_admin_panel.html  change_email.html  company_update_notification.html  confirmation_email.html  password_reset.html  permission_granted.html  revoke_permission.html
src/utils/: auth_jwt.py  exceptions.py  repository.py  template_renderer.py  unit_of_work.py  unitofwork.py
