[tool.ruff]
select = ["B", "C", "E", "F", "W"]
ignore = ["E501", "E712", "B904", "C408", "F841"]
unfixable = ["B"]

exclude = [
    'venv',  '.git',
    '.idea',  '__pycache__',
    'migrations/',  'scripts/'
]

line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F403", "F405"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.poetry]
name = "google-auth-"
version = "0.1.0"
description = ""
authors = ["Vitalii <vitalikbashkiser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
