[tool.ruff]
select = ["B", "C", "E", "F", "W"]
ignore = ["E501", "E712", "B904", "C408", "F841"]
unfixable = ["B"]

exclude = [
    'venv',  '.git',
    '.idea',  '__pycache__',
    'migrations/',  'scripts/'
]

line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F403", "F405"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.poetry]
name = "google-auth"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Vitalii <vitalikbashkiser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycryptodome = "^3.21.0"
python-jose = {extras = ["pycryptodome"], version = "^3.3.0"}
aiohttp = "^3.10.10"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-core = "^2.26.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
sqlalchemy = "^2.0.36"
bcrypt = "^4.2.0"
loguru = "^0.7.2"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
starlette = "^0.41.2"
passlib = "^1.7.4"
openai = "^1.54.3"
pydantic-settings = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
ruff = "^0.7.3"
